[gd_scene load_steps=3 format=2]

[ext_resource path="res://Guard.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 20 )

[node name="Guard" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -24.0
margin_right = 8.0
margin_bottom = 16.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="VisionSensor" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionSensor"]
polygon = PoolVector2Array( 16, 0, 64, -32, 144, -32, 144, 40, 64, 40 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="VisionSensor" to="." method="_on_VisionSensor_area_entered"]
